# cellophane-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
cellophane-derive-rs/: Cargo.toml
cellophane-derive-rs/src/: lib.rs
src/: lib.rs  windows.rs
tests/: lsa.rs  malloc.c  malloc.rs
